--- a/outputf.in
+++ b/outputf.in
@@ -1,20 +1,1 @@
-Grammer:
-E -> E+E
-E -> E*E
-E -> id
-E -> (E)
-Word : id + id * id
--------- Stack ----- Input Buffer
-        : $ ----- id + id * id $
-Shift   : $id ----- + id * id $
-Reduced : $E ----- + id * id $
-Shift   : $E+ ----- id * id $
-Shift   : $E+id ----- * id $
-Reduced : $E+E ----- * id $
-Reduced : $E ----- * id $
-Shift   : $E* ----- id $
-Shift   : $E*id ----- $
-Reduced : $E*E ----- $
-Reduced : $E ----- $
-
-Output : Valid
+Output: INVALID
